2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (time_in_millis), (main):
	Add a bit of scheduling to updates; update every 30 ms
	instead of waiting for more events.  Smooths out window moving.
	Interval needs to be configurable probably.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (root_tile):
	Make sure _XROOTPMAP_ID property is right type, format and length
	before attempting to use the resulting value.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (configure_win):
	Configure damage must include shadow region, not just window.
	Also, leaking region on each configure.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (main):
	oops.  Left in an XSynchronize call.

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (paint_root), (paint_all), (map_win), (add_win),
	(configure_win), (destroy_win), (main):

	Double buffer updates.
	Check for InputOnly windows and ignore them

2003-11-09  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (root_tile), (paint_root):
	Detect root pattern with undocumented _XROOTPMAP_ID property

2003-11-09  Keith Packard  <keithp@keithp.com>

	* Makefile:
	* xcompmgr.c: (gaussian), (make_gaussian_map), (sum_gaussian),
	(make_shadow), (shadow_picture), (win_extents), (paint_all),
	(map_win), (unmap_win), (add_win), (configure_win), (main):
	Add drop shadows.